--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <div class="game--container">
+            <div class="game--btns">
+                <div class="red--btn"></div>
+                <div class="blue--btn"></div>
+                <div class="green--btn"></div>
+                <div class="yellow--btn"></div>
+            </div>
+        </div>
+    </main>
     <script src="java.js"></script>
 </body>
 </html>
