condensing JS for buttons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <main>
         <div class="game--container">
             <div class="game--btns">
-                <div class="red--btn"></div>
-                <div class="blue--btn"></div>
-                <div class="green--btn"></div>
-                <div class="yellow--btn"></div>
+                <div class="red--btn" data-color="red"></div>
+                <div class="blue--btn" data-color="blue"></div>
+                <div class="green--btn" data-color="green"></div>
+                <div class="yellow--btn" data-color="yellow"></div>
             </div>
         </div>
     </main>
