turned buttons to 'off' color and added a start button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="green--btn" data-color="green"></div>
                 <div class="yellow--btn" data-color="yellow"></div>
             </div>
+            <button class="startGame">start</button>
         </div>
     </main>
     <script src="java.js"></script>
