--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <div class="game--container">
-            <div class="game--btns">
-                <div class="red--btn" data-color="red"></div>
-                <div class="blue--btn" data-color="blue"></div>
-                <div class="green--btn" data-color="green"></div>
-                <div class="yellow--btn" data-color="yellow"></div>
+            <div class="game--btn__container">
+                <div class="game--btn" id="redBtn" data-color="red"></div>
+                <div class="game--btn" id="blueBtn" data-color="blue"></div>
+                <div class="game--btn" id="greenBtn" data-color="green"></div>
+                <div class="game--btn" id="yellowBtn" data-color="yellow"></div>
             </div>
             <button class="startGame">start</button>
         </div>
