turn off button on a timer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <main>
         <div class="game--container">
             <div class="game--btn__container">
-                <div class="game--btn" id="redBtn" data-color="red"></div>
-                <div class="game--btn" id="blueBtn" data-color="blue"></div>
-                <div class="game--btn" id="greenBtn" data-color="green"></div>
-                <div class="game--btn" id="yellowBtn" data-color="yellow"></div>
+                <div class="game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
+                <div class="game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
+                <div class="game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
+                <div class="game--btn" id="yellowBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
             </div>
             <button class="startGame">start</button>
         </div>
