starting game logic

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
                 <div class="game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
                 <div class="game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
                 <div class="game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
-                <div class="game--btn" id="yellowBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
+                <div class="game--btn" id="goldenrodBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
             </div>
             <button class="startGame">start</button>
+        </div>
+        <div class="startScreen">
+            <div class="starScreen--content">
+                <div class="title__container">
+                    <p class="title"></p>
+                </div>
+            </div>
         </div>
     </main>
     <script src="java.js"></script>
