--- a/index.html
+++ b/index.html
@@ -10,13 +10,29 @@
 <body>
     <main>
         <div class="game--container">
-            <div class="game--btn__container">    
-                <div class="game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
-                <div class="game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
-                <div class="game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
-                <div class="game--btn" id="goldenrodBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
-                <div class="game--center"></div>
-            </div>  
+            <div class="game--style-div">
+                <div class="game--btn__container">    
+                    <div class="game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
+                    <div class="game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
+                    <div class="game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
+                    <div class="game--btn" id="goldenrodBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
+                    <div class="game--center"></div>
+                </div>
+                <div class="control--panel">
+                    <div class="power--container">
+                        <p class="power--txt">Power</p>
+                        <div class="power--btn"></div>
+                    </div>
+                    <div class="control--pannel--center">
+                        <p class="game--logo">Simon</p>
+                        <div class="score--screen">0</div>
+                    </div>
+                    <div class="restart--container">
+                        <p class="restart--txt">Restart</p>
+                        <div class="restart--btn"></div>
+                    </div>
+                </div>  
+            </div>
         </div>
         <div class="startScreen">
             <div class="starScreen--content">
@@ -30,9 +46,6 @@
         <div class="footer--container">
             <div class="quit--container">
                 <div class="quit--btn">Quit</div>
-            </div>
-            <div class="restart--container">
-                <div class="restart--btn">Restart</div>
             </div>
         </div>
     </main>
