control panel styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="power--btn"></div>
                     </div>
                     <div class="control--pannel--center">
-                        <p class="game--logo">Simon</p>
+                        <p class="game--logo">SIMON</p>
                         <div class="score--screen">0</div>
                     </div>
                     <div class="restart--container">
@@ -37,7 +37,7 @@
         <div class="startScreen">
             <div class="starScreen--content">
                 <div class="title__container">
-                    <p class="title">Simon</p>
+                    <p class="title">SIMON</p>
                     <button class="startGame">start</button>
                 </div>
             </div>
