--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
                         <div class="score--screen">0</div>
                     </div>
                     <div class="restart--container">
-                        <p class="restart--txt">Restart</p>
+                        <p class="restart--txt">Start / Re-start</p>
                         <div class="restart--btn"></div>
                     </div>
                 </div>  
             </div>
         </div>
         <div class="startScreen">
-            <div class="starScreen--content">
+            <div class="startScreen--content">
                 <div class="title__container">
                     <p class="title">SIMON</p>
                     <button class="startGame">start</button>
+                    <div class="loading">
+                        <div class="dot1"></div>
+                        <div class="dot2"></div>
+                        <div class="dot3"></div>
+                    </div>
                 </div>
             </div>
         </div>
