control panel style changes

--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
                         <div class="power--btn"></div>
                     </div>
                     <div class="control--pannel--center">
+                        <div class="score--screen__container" id="screen--container1">
+                            <div class="score--screen screen1"></div>
+                            <p class="score--txt">SCORE</p>
+                        </div>
                         <p class="game--logo">SIMON</p>
-                        <div class="score--screen">0</div>
+                        <div class="score--screen__container" id="screen--container2">
+                            <div class="score--screen screen2"></div>
+                            <p class="score--txt">HIGH<br>SCORE</p>
+                        </div>
                     </div>
                     <div class="restart--container">
-                        <p class="restart--txt">Start / Re-start</p>
+                        <p class="restart--txt">Start</p>
                         <div class="restart--btn"></div>
                     </div>
                 </div>  
