added high score tracker

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     </div>
                     <div class="control--pannel--center">
                         <div class="score--screen__container" id="screen--container1">
-                            <div class="score--screen screen1"></div>
+                            <div class="score--screen js-screen1"></div>
                             <p class="score--txt">SCORE</p>
                         </div>
                         <p class="game--logo">SIMON</p>
                         <div class="score--screen__container" id="screen--container2">
-                            <div class="score--screen screen2"></div>
+                            <div class="score--screen js-screen2"></div>
                             <p class="score--txt">HIGH<br>SCORE</p>
                         </div>
                     </div>
