--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <main>
         <div class="game--container">
             <div class="game--style-div">
-                <div class="game--btn__container">    
-                    <div class="game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
-                    <div class="game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
-                    <div class="game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
-                    <div class="game--btn" id="goldenrodBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
-                    <div class="antiClick"></div>
+                <div class="game--btn__container js-game--btn__container">    
+                    <div class="game--btn js-game--btn" id="redBtn" data-color="red" data-original="darkred"></div>
+                    <div class="game--btn js-game--btn" id="blueBtn" data-color="blue" data-original="darkblue"></div>
+                    <div class="game--btn js-game--btn" id="greenBtn" data-color="green" data-original="darkgreen"></div>
+                    <div class="game--btn js-game--btn" id="goldenrodBtn" data-color="goldenrod" data-original="darkgoldenrod"></div>
                 </div>
                 <div class="control--panel">
                     <div class="power--container">
                         <p class="power--txt">Power</p>
-                        <div class="power--btn"></div>
+                        <div class="power--btn js-power--btn"></div>
                     </div>
                     <div class="control--pannel--center">
                         <div class="score--screen__container" id="screen--container1">
@@ -36,16 +35,16 @@
                     </div>
                     <div class="restart--container">
                         <p class="restart--txt">Start</p>
-                        <div class="restart--btn"></div>
+                        <div class="restart--btn js-restart--btn"></div>
                     </div>
                 </div>  
             </div>
         </div>
-        <div class="startScreen">
+        <div class="startScreen js-startScreen">
             <div class="startScreen--content">
                 <div class="title__container">
                     <p class="title">SIMON</p>
-                    <button class="startGame">start</button>
+                    <button class="startGame js-startGame">start</button>
                     <div class="loading">
                         <div class="dot1"></div>
                         <div class="dot2"></div>
@@ -56,7 +55,7 @@
         </div>
         <div class="footer--container">
             <div class="quit--container">
-                <div class="quit--btn">Quit</div>
+                <div class="quit--btn js-quit--btn">Quit</div>
             </div>
         </div>
     </main>
