added player/comp turn indicator lights

--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
                             <div class="score--screen js-screen1"></div>
                             <p class="score--txt">SCORE</p>
                         </div>
-                        <p class="game--logo">SIMON</p>
+                        <div class="logo--container">
+                            <div class="turn--light__container">
+                                <div class="player--light__container">
+                                    <p class="player--light__txt">Player</p>
+                                    <div class="player--light"></div>
+                                </div>
+                                <div class="comp--light__container">
+                                    <p class="comp--light__txt">CPU</p>
+                                    <div class="comp--light"></div>
+                                </div>
+                            </div>
+                            <p class="game--logo">SIMON</p>
+                        </div>
                         <div class="score--screen__container" id="screen--container2">
-                            <div class="score--screen js-screen2"></div>
+                            <div class="score--screen js-screen2" id="screen2"></div>
                             <p class="score--txt">HIGH<br>SCORE</p>
                         </div>
                     </div>
