added turn light functionality

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                             <div class="turn--light__container">
                                 <div class="player--light__container">
                                     <p class="player--light__txt">Player</p>
-                                    <div class="player--light"></div>
+                                    <div class="player--light js-player--light"></div>
                                 </div>
                                 <div class="comp--light__container">
                                     <p class="comp--light__txt">CPU</p>
-                                    <div class="comp--light"></div>
+                                    <div class="comp--light js-comp--light"></div>
                                 </div>
                             </div>
                             <p class="game--logo">SIMON</p>
