--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     <div class="comp--light js-comp--light"></div>
                                 </div>
                             </div>
-                            <p class="game--logo">SIMON</p>
+                            <p class="game--logo ja-game--logo">SIMON</p>
                         </div>
                         <div class="score--screen__container" id="screen--container2">
                             <div class="score--screen js-screen2" id="screen2"></div>
