--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="control--panel">
                     <div class="power--container">
-                        <p class="power--txt">Power</p>
+                        <p class="power--txt js-power--txt">Power</p>
                         <div class="power--btn js-power--btn"></div>
                     </div>
                     <div class="control--pannel--center">
@@ -41,7 +41,7 @@
                                     <div class="comp--light js-comp--light"></div>
                                 </div>
                             </div>
-                            <p class="game--logo ja-game--logo">SIMON</p>
+                            <p class="game--logo js-game--logo">SIMON</p>
                         </div>
                         <div class="score--screen__container" id="screen--container2">
                             <div class="score--screen js-screen2" id="screen2"></div>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="restart--container">
-                        <p class="restart--txt">Start</p>
+                        <p class="restart--txt js-restart--txt">Start</p>
                         <div class="restart--btn js-restart--btn"></div>
                     </div>
                 </div>  
