--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="footer--container">
-            <div class="quit--container">
+            <div class="quit--btn__container">
                 <div class="quit--btn js-quit--btn">Quit</div>
             </div>
         </div>
