title screen styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="startScreen--content">
                 <div class="title__container">
                     <p class="title">SIMON</p>
-                    <button class="startGame js-startGame">start</button>
+                    <p class="title--content">A game of memory</p>
+                    <div class="startGame js-startGame">start</div>
                     <div class="loading">
                         <div class="dot1"></div>
                         <div class="dot2"></div>
