--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Lato:wght@100;300;400;700&family=Noto+Sans+Symbols+2&family=Orbitron&family=Righteous&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Simon</title>
 </head>
 <body>
     <main>
