added btn for info modal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/2654514.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Lato:wght@100;300;400;700&family=Noto+Sans+Symbols+2&family=Orbitron&family=Righteous&display=swap" rel="stylesheet">
@@ -64,9 +65,14 @@
                 </div>
             </div>
         </div>
+        <div class="modal__container js-info--modal__container">
+            <div class="modal--close js-modal--close"></div>
+            <div class="modal--content"></div>  
+        </div>
         <div class="footer--container">
             <div class="quit--btn__container">
                 <div class="quit--btn js-quit--btn">Quit</div>
+                <div class="modal--btn js-modal--btn">?</div>
             </div>
         </div>
     </main>
