added modal styling and content

--- a/index.html
+++ b/index.html
@@ -65,9 +65,18 @@
                 </div>
             </div>
         </div>
-        <div class="modal__container js-info--modal__container">
-            <div class="modal--close js-modal--close"></div>
-            <div class="modal--content"></div>  
+        <div class="info--modal__container js-info--modal__container">
+            <div class="info--modal">
+                <div class="info--modal--close js-info--modal--close">X</div>
+                <div class="info--modal--title">SIMON</div>
+                <div class="info--modal--content">
+                    <p>Simon is an electronic game of<br>short-term memory skill.</p>
+                    <p>The game choses one of the four colors at random.</p>
+                    <p>You must reproduce the same color by pressing the correlated button.</p>
+                    <p>As the game progresses the sequence of colors gets longer.</p>
+                    <p>The longer you last the higher your score.</p>
+                </div>  
+            </div>
         </div>
         <div class="footer--container">
             <div class="quit--btn__container">
